# cpp-gl-skeletal-ozz-animation

./: .gitignore  CMakeLists.txt  README.md
inc/: animated_model.hpp  model_loader.hpp  texture_2D.hpp
src/: main.cpp
src/shaders/: default.fs  default.vs
